--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
                 <p><strong>Symbol:</strong> <span id="contractSymbol">-</span></p>
                 <p><strong>Maturity Date:</strong> <span id="maturityDate">-</span></p>
                 <p><strong>Total Supply:</strong> <span id="totalSupply">-</span></p>
+                <p><strong>Purchase Price:</strong> $<span id="purchasePrice">-</span></p>
+                <p><strong>Early Redeem Rate:</strong> $<span id="earlyRedeemRate">-</span></p>
+                <p><strong>Maturity Redeem Rate:</strong> $<span id="redeemRate">-</span></p>
             </div>
 
             <div class="card">
