--- a/index.html
+++ b/index.html
@@ -8,12 +8,14 @@
 </head>
 <body>
     <main>
-        <h1>BPropertyFlow</h1>
+        <h1>PropertyFlow</h1>
         <button id="connectButton">Connect Wallet</button>
 
         <section id="dapp" class="hidden">
             <div class="card">
-                <h2>PropertyFlow is a real-world asset (RWA) bond system that tokenizes commercial lease and overhead payments. Buy PFLOW25 for $10 and earn $12 after 12 months. Available for a limited time — cutoff at 9 months. Early redemption allowed after 45 days at a reduced rate. Fractional purchases supported.</h2>
+                <h2>PropertyFlow is a real-world asset (RWA) bond system that tokenizes commercial lease and overhead payments. 
+                    Buy PFLOW25 for $10 and earn $12 after 12 months. Available for a limited time — cutoff at 9 months. 
+                    Early redemption allowed after 45 days at a reduced rate. Fractional purchases supported.</h2>
                 <p><strong>Name:</strong> <span id="contractName">-</span></p>
                 <p><strong>Symbol:</strong> <span id="contractSymbol">-</span></p>
                 <p><strong>Maturity Date:</strong> <span id="maturityDate">-</span></p>
