--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
                 <h2>Actions</h2>
                 <div class="action-item">
                     <input type="number" id="buyAmount" placeholder="Amount of pUSD to spend">
+                    <input type="number" id="buyAmount" placeholder="Number of PFLOW25 to buy">
                     <button id="buyButton">Buy Tokens</button>
                 </div>
                 <div class="action-item">
